Fix more alignment, coloring and spacing UI issues
Pixel thumping.

--- a/src/components/buttons/Buttons.css
+++ b/src/components/buttons/Buttons.css
@@ -15,6 +15,7 @@
 .MiniPillButton.isLink {
   display: inline-block;
   padding-top: 0;
+  vertical-align: top;
 }
 
 .MiniPillButton.size58 {
